--- a/aboutMe.html
+++ b/aboutMe.html
@@ -20,30 +20,31 @@
           </ul>
         </div>
          <div class="about">
-            <h2> About Me</h2>
-            <div class="pic5">
-                  <p>
-                    Hi, my name is Khamphong Keobangsy, but my friends call me Tom. I was born in Thailand when Vietnam War was going on.
-                    As the war was ending my parents got on the plane to come to the the Unite State. We did not have anything, but our
-                    clothes on our backs when we came here. florida was warm like our home country.Tarpon Spring Florida I went to school
-                    there from kindergarten through 5th grade what I learn is how to be a kid and have friends,then we move to Hoilday
-                    florida for a year, finally we settle in in Clearwater. I went to Morgan Fitzgerald Middle from 7th grade to 8th grade
-                    where you make friends and have crushes. I went to Pinellas Park high from 9th grade to 12 grade this is when you have
-                    to choose your friends you might make a mistake or two, but you will see who is there for you. After, I went to Pinellas
-                    Technical College for computer technology and graduate  with a certificate. Now I am in St.Peterburg College with
-                    cerification, but going for A.S degree in Web development.
-
-                </p>
+          <h2> About Me</h2>
+            <div class="me">
+              <div class="pic5">
+                    <p>
+                      Hi, my name is Khamphong Keobangsy, but my friends call me Tom. I was born in Thailand when Vietnam War was going on.
+                      As the war was ending my parents got on the plane to come to the the Unite State. We did not have anything, but our
+                      clothes on our backs when we came here. florida was warm like our home country.Tarpon Spring Florida I went to school
+                      there from kindergarten through 5th grade what I learn is how to be a kid and have friends,then we move to Hoilday
+                      florida for a year, finally we settle in in Clearwater. I went to Morgan Fitzgerald Middle from 7th grade to 8th grade
+                      where you make friends and have crushes. I went to Pinellas Park high from 9th grade to 12 grade this is when you have
+                      to choose your friends you might make a mistake or two, but you will see who is there for you. After, I went to Pinellas
+                      Technical College for computer technology and graduate  with a certificate. Now I am in St.Peterburg College with
+                      cerification, but going for A.S degree in Web development.
+                  </p>
+              </div>
+              <div class="image_me">
+                <img src="pic/pic5.jpg" width="80%">
+              </div>
+              <div class="image1_me">
+                <img src="pic/pic6.jpg" width="80%">
+              </div>
+              <div class="image2_me">
+                <img src="pic/pic7.jpg" width="450px">
+              </div>
             </div>
-            <div class="image_me">
-              <img src="pic/pic5.jpg" width="100%">
-            </div>
-            <div class="image1_me">
-              <img src="pic/pic6.jpg" width="100%">
-            </div>
-            <div class="image2_me">
-              <img src="pic/pic7.jpg" width="100%">
-            </div>
-        </div>
+          </div>
     </body>
   </html>
