--- a/contact.html
+++ b/contact.html
@@ -22,15 +22,16 @@
         <div class="container1">
           <form>
             <label for="fname">First Name:</label><br>
-            <input type="text" name="fname"><br>
+            <input type="text" id="fname" name="fname" placeholder="Your first name.."><br>
             <label for="lname">Last Name:</label><br>
-            <input type="text" name="lname"><br>
+            <input type="text" id="lname" name="lname" placeholder="Your last name..."><br>
             <label for="email">E-Mail:</label><br>
-            <input type="text" class="email" name="email"><br>
+            <input type="text" class="email" name="email" placeholder="Your email"><br>
             <label for="comment">Ask Question: </label><br>
-            <textarea class="comment"></textarea><br>
+            <textarea id="comment" name="subject" placeholder="Ask Question" style="height:100px"></textarea><br>
             <input type="submit" class="submit" name="name">
           </form>
       </div>
+      <script src="contact.js"></script>
     </body>
   </html>
