--- a/gallery.html
+++ b/gallery.html
@@ -20,7 +20,7 @@
           </ul>
         </div>
        <div class="pic4">
-         <img src="pic/pic4.jpg" width="100%">
+         <img src="pic/pic4.jpg" width="450px">
       </div>
     </body>
   </html>
