--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
         <h1>Kdev11</h1>
       </div>
       <div class="row">
-        <div class=" col-3 col-s-3 nav">
+        <div class="nav">
           <ul>
             <li><a href="portfolio.html">Home</a></li>
             <li><a href="contact.html">Contact</a></li>
@@ -23,10 +23,13 @@
           </ul>
         </div>
       </div>
-      <div classs="pic_port">
-        <div class="container_port">
+      <div class="top">
+        <div class="box">
 
-       </div>
-    </div>
+        </div>
+        <div class="box1">
+
+        </div>
+      </div>
    </body>
   </html>
