--- a/aboutMe.html
+++ b/aboutMe.html
@@ -26,13 +26,10 @@
                     <p>
                       Hi, my name is Khamphong Keobangsy, but my friends call me Tom. I was born in Thailand when Vietnam War was going on.
                       As the war was ending my parents got on the plane to come to the the Unite State. We did not have anything, but our
-                      clothes on our backs when we came here. florida was warm like our home country.Tarpon Spring Florida I went to school
-                      there from kindergarten through 5th grade what I learn is how to be a kid and have friends,then we move to Hoilday
-                      florida for a year, finally we settle in in Clearwater. I went to Morgan Fitzgerald Middle from 7th grade to 8th grade
-                      where you make friends and have crushes. I went to Pinellas Park high from 9th grade to 12 grade this is when you have
-                      to choose your friends you might make a mistake or two, but you will see who is there for you. After, I went to Pinellas
-                      Technical College for computer technology and graduate  with a certificate. Now I am in St.Peterburg College with
-                      cerification, but going for A.S degree in Web development.
+                      clothes on our backs when we came here. florida was warm like our home country.  I went to Pinellas Park high from
+                      9th grade to 12 grade this is when you have to choose your friends you might make a mistake or two, but you will
+                      see who is there for you. After, I went to Pinellas Technical College for computer technology and graduate with
+                      a certificate. Now I am in St.Peterburg College with cerification, but going for A.S degree in Web development.
                   </p>
               </div>
               <div class="image_me">
