--- a/aboutMe.html
+++ b/aboutMe.html
@@ -8,12 +8,13 @@
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Charmonman">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
       <h1>Kdev11</h1>
         <div class="nav">
           <ul>
-            <li><a href="portfolio.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li><a href="gallery.html">Gallery</a></li>
             <li><a href="aboutMe.html">AboutMe</a></li>
@@ -24,24 +25,32 @@
             <div class="me">
               <div class="pic5">
                     <p>
-                      Hi, my name is Khamphong Keobangsy, but my friends call me Tom. I was born in Thailand when Vietnam War was going on.
-                      As the war was ending my parents got on the plane to come to the the Unite State. We did not have anything, but our
-                      clothes on our backs when we came here. florida was warm like our home country.  I went to Pinellas Park high from
-                      9th grade to 12 grade this is when you have to choose your friends you might make a mistake or two, but you will
-                      see who is there for you. After, I went to Pinellas Technical College for computer technology and graduate with
-                      a certificate. Now I am in St.Peterburg College with cerification, but going for A.S degree in Web development.
+                      Hi, my name is Tom. I was born in Thailand when Vietnam War was going on. As the war was ending my parents got on
+                      the plane to come to the the United State. We did not have anything, but our clothes on our backs when we came here.
+                      florida was warm like our home country.  I went to Pinellas Park high from 9th grade to 12 grade this is when you
+                      have to choose your friends you might make a mistake or two, but you will see who is there for you. After, I went
+                      to Pinellas Technical College for computer technology and graduate with a certificate. Now I am in St.Peterburg College
+                      with cerification, but going for A.S degree in Web development.
                   </p>
               </div>
               <div class="image_me">
-                <img src="pic/pic5.jpg" width="80%">
+                <img src="pic/pic5.jpg" width="90%">
               </div>
               <div class="image1_me">
-                <img src="pic/pic6.jpg" width="80%">
+                <img src="pic/pic6.jpg" width="100%">
               </div>
               <div class="image2_me">
-                <img src="pic/pic7.jpg" width="450px">
+                <img src="pic/pic7.jpg" width="540px">
               </div>
             </div>
           </div>
     </body>
+    <footer>
+      <div class="media">
+        <a href="https://www.linkedin.com/in/khamphong-keobangsy-65737884/" class="fa fa-linkedin"></a>
+        <a href="https://twitter.com/k_dev11?fbclid=IwAR1QKupmxavIzgtyj9TW6OU4ZVm80a8sNwXiUPqvF3hYTKz1g5eeTsQ3Mkk" class="fa fa-twitter"></a>
+        <a href="https://www.facebook.com/profile.php?id=100075626024616" class="fa fa-facebook"></a>
+        <a href="https://www.instagram.com/k_dev11/?fbclid=IwAR23pBdjUbNerFaahSQ6bLcBTEs-g89ymX-Jhycgy9mYzXYielmJTPLfHDo" class="fa fa-instagram"></a>
+      </div>
+    </footer>
   </html>
