--- a/contact.html
+++ b/contact.html
@@ -8,19 +8,20 @@
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Charmonman">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
       <h1>Kdev11</h1>
         <div class="nav">
           <ul>
-            <li><a href="portfolio.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li><a href="gallery.html">Gallery</a></li>
             <li><a href="aboutMe.html">AboutMe</a></li>
           </ul>
         </div>
         <div class="container1">
-          <form>
+          <form action="mailto:kkeobangsy@gmail.com" method="post" enctype="text/plain">
             <label for="fname">First Name:</label><br>
             <input type="text" id="fname" name="fname" placeholder="Your first name.."><br>
             <label for="lname">Last Name:</label><br>
@@ -32,6 +33,13 @@
             <input type="submit" class="submit" name="name">
           </form>
       </div>
-      <script src="contact.js"></script>
     </body>
+    <footer>
+      <div class="media">
+        <a href="https://www.linkedin.com/in/khamphong-keobangsy-65737884/" class="fa fa-linkedin"></a>
+        <a href="https://twitter.com/k_dev11?fbclid=IwAR1QKupmxavIzgtyj9TW6OU4ZVm80a8sNwXiUPqvF3hYTKz1g5eeTsQ3Mkk" class="fa fa-twitter"></a>
+        <a href="https://www.facebook.com/profile.php?id=100075626024616" class="fa fa-facebook"></a>
+        <a href="https://www.instagram.com/k_dev11/?fbclid=IwAR23pBdjUbNerFaahSQ6bLcBTEs-g89ymX-Jhycgy9mYzXYielmJTPLfHDo" class="fa fa-instagram"></a>
+      </div>
+    </footer>
   </html>
