--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
   <html lang="en">
     <head>
-      <title>gallery</title>
+      <title>Portfolio </title>
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta charset="utf-8">
       <link rel="stylesheet" type="text/css" href="portfolio.css">
@@ -11,25 +11,34 @@
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
+      <div class="header">
         <h1>Kdev11</h1>
+      </div>
+      <div class="row">
         <div class="nav">
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li><a href="gallery.html">Gallery</a></li>
-            <li><a href="aboutMe.html">AboutMe</a></li>
+            <li><a href="aboutMe.html">About Me</a></li>
           </ul>
         </div>
-       <div class="pic4">
-         <img src="pic/pic4.jpg" width="450px">
       </div>
-    </body>
+      <div class="top">
+        <div class="box">
+
+        </div>
+        <div class="box1">
+
+        </div>
+      </div>
+   </body>
   <footer>
-    <div class="media">
-      <a href="https://www.linkedin.com/in/khamphong-keobangsy-65737884/" class="fa fa-linkedin"></a>
-      <a href="https://twitter.com/k_dev11?fbclid=IwAR1QKupmxavIzgtyj9TW6OU4ZVm80a8sNwXiUPqvF3hYTKz1g5eeTsQ3Mkk" class="fa fa-twitter"></a>
-      <a href="https://www.facebook.com/profile.php?id=100075626024616" class="fa fa-facebook"></a>
-      <a href="https://www.instagram.com/k_dev11/?fbclid=IwAR23pBdjUbNerFaahSQ6bLcBTEs-g89ymX-Jhycgy9mYzXYielmJTPLfHDo" class="fa fa-instagram"></a>
-    </div>
-  </footer>
+   <div class="media">
+     <a href="https://www.linkedin.com/in/khamphong-keobangsy-65737884/" class="fa fa-linkedin"></a>
+     <a href="https://twitter.com/k_dev11?fbclid=IwAR1QKupmxavIzgtyj9TW6OU4ZVm80a8sNwXiUPqvF3hYTKz1g5eeTsQ3Mkk" class="fa fa-twitter"></a>
+     <a href="https://www.facebook.com/profile.php?id=100075626024616" class="fa fa-facebook"></a>
+     <a href="https://www.instagram.com/k_dev11/?fbclid=IwAR23pBdjUbNerFaahSQ6bLcBTEs-g89ymX-Jhycgy9mYzXYielmJTPLfHDo" class="fa fa-instagram"></a>
+   </div>
+ </footer>
   </html>
