--- a/aboutMe.html
+++ b/aboutMe.html
@@ -22,7 +22,6 @@
         </div>
          <div class="about">
           <h2> About Me</h2>
-            <div class="me">
               <div class="pic5">
                     <p>
                       Hi, my name is Tom. I was born in Thailand when Vietnam War was going on. As the war was ending my parents got on
@@ -34,15 +33,14 @@
                   </p>
               </div>
               <div class="image_me">
-                <img src="pic/pic5.jpg" width="90%">
-              </div>
-              <div class="image1_me">
                 <img src="pic/pic6.jpg" width="100%">
               </div>
-              <div class="image2_me">
-                <img src="pic/pic7.jpg" width="540px">
+              <div class="image1_me">
+                <img src="pic/pic5.jpg" width="100%">
               </div>
-            </div>
+              <div class="image2_me">
+                <img src="pic/pic7.jpg" width="100%">
+              </div>
           </div>
     </body>
     <footer>
@@ -51,6 +49,7 @@
         <a href="https://twitter.com/k_dev11?fbclid=IwAR1QKupmxavIzgtyj9TW6OU4ZVm80a8sNwXiUPqvF3hYTKz1g5eeTsQ3Mkk" class="fa fa-twitter"></a>
         <a href="https://www.facebook.com/profile.php?id=100075626024616" class="fa fa-facebook"></a>
         <a href="https://www.instagram.com/k_dev11/?fbclid=IwAR23pBdjUbNerFaahSQ6bLcBTEs-g89ymX-Jhycgy9mYzXYielmJTPLfHDo" class="fa fa-instagram"></a>
+        <a href="https://www.github.com/kkeobangsy" class="fa fa-github"></a>
       </div>
     </footer>
   </html>
