--- a/gallery.html
+++ b/gallery.html
@@ -21,7 +21,7 @@
           </ul>
         </div>
        <div class="pic4">
-         <img src="pic/pic4.jpg" width="450px">
+         <img src="pic/pic4.jpg" width="100%">
       </div>
     </body>
   <footer>
@@ -30,6 +30,7 @@
       <a href="https://twitter.com/k_dev11?fbclid=IwAR1QKupmxavIzgtyj9TW6OU4ZVm80a8sNwXiUPqvF3hYTKz1g5eeTsQ3Mkk" class="fa fa-twitter"></a>
       <a href="https://www.facebook.com/profile.php?id=100075626024616" class="fa fa-facebook"></a>
       <a href="https://www.instagram.com/k_dev11/?fbclid=IwAR23pBdjUbNerFaahSQ6bLcBTEs-g89ymX-Jhycgy9mYzXYielmJTPLfHDo" class="fa fa-instagram"></a>
+      <a href="https://www.github.com/kkhamphong" class="fa fa-github"></a>
     </div>
   </footer>
   </html>
