--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
             <li><a href="aboutMe.html">About Me</a></li>
           </ul>
         </div>
-      </div>
       <div class="top">
         <div class="box">
-
+          <img src="pic/pic2.jpg" class="pic2" width="100%">
         </div>
         <div class="box1">
-
+          <img src="pic/pic1.jpg" class="pic1" width="100%">
         </div>
       </div>
+    </div>
    </body>
   <footer>
    <div class="media">
@@ -39,6 +39,7 @@
      <a href="https://twitter.com/k_dev11?fbclid=IwAR1QKupmxavIzgtyj9TW6OU4ZVm80a8sNwXiUPqvF3hYTKz1g5eeTsQ3Mkk" class="fa fa-twitter"></a>
      <a href="https://www.facebook.com/profile.php?id=100075626024616" class="fa fa-facebook"></a>
      <a href="https://www.instagram.com/k_dev11/?fbclid=IwAR23pBdjUbNerFaahSQ6bLcBTEs-g89ymX-Jhycgy9mYzXYielmJTPLfHDo" class="fa fa-instagram"></a>
+     <a href="https://www.github.com/kkeobangsy" class="fa fa-github"></a>
    </div>
  </footer>
   </html>
