--- a/contact.html
+++ b/contact.html
@@ -20,19 +20,20 @@
             <li><a href="aboutMe.html">AboutMe</a></li>
           </ul>
         </div>
-        <div class="container1">
-          <form action="mailto:kkeobangsy@gmail.com" method="post" enctype="text/plain">
-            <label for="fname">First Name:</label><br>
-            <input type="text" id="fname" name="fname" placeholder="Your first name.."><br>
-            <label for="lname">Last Name:</label><br>
-            <input type="text" id="lname" name="lname" placeholder="Your last name..."><br>
-            <label for="email">E-Mail:</label><br>
-            <input type="text" class="email" name="email" placeholder="Your email"><br>
-            <label for="comment">Ask Question: </label><br>
-            <textarea id="comment" name="subject" placeholder="Ask Question" style="height:100px"></textarea><br>
-            <input type="submit" class="submit" name="name">
-          </form>
-      </div>
+        <div class="picture">
+            <div class="container1">
+              <form action="contact_form-handler.php" method="post" name="contact-form" enctype="text/plain">
+                <label for="name" class="name">Name:</label><br>
+                <input type="text" id="fname" name="name" placeholder="Your name.."><br>
+                <label for="email" class="email">E-Mail:</label><br>
+                <input type="text" class="email" name="email" placeholder="Your email"><br>
+                <label for="comment" class="comment">Ask Question: </label><br>
+                <textarea id="comment" name="subject" placeholder="Ask Question" style="height:150px"></textarea><br>
+                <input type="submit" class="submit" name="name">
+              </form>
+          </div>
+        </div>
+      <script src="form.js"></script>
     </body>
     <footer>
       <div class="media">
@@ -40,6 +41,7 @@
         <a href="https://twitter.com/k_dev11?fbclid=IwAR1QKupmxavIzgtyj9TW6OU4ZVm80a8sNwXiUPqvF3hYTKz1g5eeTsQ3Mkk" class="fa fa-twitter"></a>
         <a href="https://www.facebook.com/profile.php?id=100075626024616" class="fa fa-facebook"></a>
         <a href="https://www.instagram.com/k_dev11/?fbclid=IwAR23pBdjUbNerFaahSQ6bLcBTEs-g89ymX-Jhycgy9mYzXYielmJTPLfHDo" class="fa fa-instagram"></a>
+        <a href="https://www.github.com/kkeobangsy" class="fa fa-github"></a>
       </div>
     </footer>
   </html>
