--- a/gallery.html
+++ b/gallery.html
@@ -4,33 +4,30 @@
       <title>gallery</title>
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta charset="utf-8">
-      <link rel="stylesheet" type="text/css" href="portfolio.css">
+      <link rel="stylesheet" type="text/css" href="profolio.css">
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Charmonman">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
-        <h1>Kdev11</h1>
+      <div class="logo">
+        <img src="pic/logo1.jpg">
+      </div>
         <div class="nav">
           <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="index.html">AboutMe</a></li>
+            <li><a href="signup.html">Contact</a></li>
             <li><a href="gallery.html">Gallery</a></li>
-            <li><a href="aboutMe.html">AboutMe</a></li>
           </ul>
         </div>
-       <div class="pic4">
-         <img src="pic/pic4.jpg" width="100%">
-      </div>
+          <div class="site">
+            <div id="picg" class="pho">
+                <img src="pic/Ji-yeonYun.jpg" ondragstart="return false">
+          </div>
+          <div id="picg" class="photo">
+              <img src="pic/ChristianBrinkmann.jpg" ondragstart="return false">
+          </div>
+          </div>
     </body>
-  <footer>
-    <div class="media">
-      <a href="https://www.linkedin.com/in/khamphong-keobangsy-65737884/" class="fa fa-linkedin"></a>
-      <a href="https://twitter.com/k_dev11?fbclid=IwAR1QKupmxavIzgtyj9TW6OU4ZVm80a8sNwXiUPqvF3hYTKz1g5eeTsQ3Mkk" class="fa fa-twitter"></a>
-      <a href="https://www.facebook.com/profile.php?id=100075626024616" class="fa fa-facebook"></a>
-      <a href="https://www.instagram.com/k_dev11/?fbclid=IwAR23pBdjUbNerFaahSQ6bLcBTEs-g89ymX-Jhycgy9mYzXYielmJTPLfHDo" class="fa fa-instagram"></a>
-      <a href="https://www.github.com/kkhamphong" class="fa fa-github"></a>
-    </div>
-  </footer>
   </html>
