--- a/index.html
+++ b/index.html
@@ -1,45 +1,60 @@
 <!DOCTYPE html>
   <html lang="en">
     <head>
-      <title>Portfolio </title>
+      <title>aboutMe</title>
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta charset="utf-8">
-      <link rel="stylesheet" type="text/css" href="portfolio.css">
+      <link rel="stylesheet" type="text/css" href="profolio.css">
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Charmonman">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
-      <div class="header">
-        <h1>Kdev11</h1>
+      <div class="logo">
+        <img src="pic/logo1.jpg">
       </div>
-      <div class="row">
         <div class="nav">
           <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="index.html">AboutMe</a></li>
+            <li><a href="signup.html">Contact</a></li>
             <li><a href="gallery.html">Gallery</a></li>
-            <li><a href="aboutMe.html">About Me</a></li>
           </ul>
         </div>
-      <div class="top">
-        <div class="box">
-          <img src="pic/pic2.jpg" class="pic2" width="100%">
+       <h1> About Me</h1>
+          <div class="slide_container">
+            <div class="container">
+            <div class="slide">
+                <div class="skill">
+                  <p>Skill</p>
+              </div>
+                <div class="about" >
+                          <ol>
+                              <li>Html</li>
+                              <li>Css</li>
+                              <li>JavaScript client/server</li>
+                              <li>Mysql</li>
+                              <li>React</li>
+                              <li>Php</li>
+                              <li>Mongodb</li>
+                              <li>WordPress</li>
+                              <li>Bootstrap</li>
+                              <li>TO be continue</li>
+                              <p class="cert">I carry certification in A+ Software/Hardware, Net+, 
+                                Copper/Fiber wires, Web Development Specialist, and graduated in 2022
+                                 from St.Petesburg College with a Web Development Full Stack.
+                              </p>
+                          </ol>
+                </div>
+            </div>
+            <div class="slide1">
+                  <div class="first">
+                  </div>
+            </div>
+          </div>
         </div>
-        <div class="box1">
-          <img src="pic/pic1.jpg" class="pic1" width="100%">
+        <div class="second">
+          <img src="pic/lines.jpg" style="width:100%">
         </div>
-      </div>
-    </div>
-   </body>
-  <footer>
-   <div class="media">
-     <a href="https://www.linkedin.com/in/khamphong-keobangsy-65737884/" class="fa fa-linkedin"></a>
-     <a href="https://twitter.com/k_dev11?fbclid=IwAR1QKupmxavIzgtyj9TW6OU4ZVm80a8sNwXiUPqvF3hYTKz1g5eeTsQ3Mkk" class="fa fa-twitter"></a>
-     <a href="https://www.facebook.com/profile.php?id=100075626024616" class="fa fa-facebook"></a>
-     <a href="https://www.instagram.com/k_dev11/?fbclid=IwAR23pBdjUbNerFaahSQ6bLcBTEs-g89ymX-Jhycgy9mYzXYielmJTPLfHDo" class="fa fa-instagram"></a>
-     <a href="https://www.github.com/kkeobangsy" class="fa fa-github"></a>
-   </div>
- </footer>
+    </body>
   </html>
